--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.NoteApp"
         tools:targetApi="31">
         <activity
-            android:name=".ui.insert.NoteAddUpdateActivity"
+            android:name=".ui.insert.AddUpdateNoteActivity"
             android:exported="false" />
         <activity
             android:name=".ui.main.MainActivity"
